trabalho/Resultados/SamaraGoncalves/completo/result_compilation.txt
executiva.c:54:2: error: #endif without #if
   54 | #endif // _EXECUTIVA_H_
      |  ^~~~~
executiva.c: In function ‘criaExecutiva’:
executiva.c:21:1: warning: control reaches end of non-void function [-Wreturn-type]
   21 | }
      | ^
fila.c: In function ‘processaReservasNaFila’:
fila.c:87:14: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   87 |         if (!strcmp(getStatusReserva(f->reservas[i]), "CONFIRMADA"))
      |              ^~~~~~
fila.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
    3 | #include "fila.h"
  +++ |+#include <string.h>
    4 | #include "reserva.h"
fila.c: In function ‘imprimeFila’:
fila.c:105:26: warning: ‘%d’ directive writing between 1 and 10 bytes into a region of size 6 [-Wformat-overflow=]
  105 |         sprintf(id, "RES-%d", i + 1);
      |                          ^~
fila.c:105:21: note: directive argument in the range [1, 2147483647]
  105 |         sprintf(id, "RES-%d", i + 1);
      |                     ^~~~~~~~
fila.c:105:9: note: ‘sprintf’ output between 6 and 15 bytes into a destination of size 10
  105 |         sprintf(id, "RES-%d", i + 1);
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
reserva.c: In function ‘criaReserva’:
reserva.c:43:5: warning: implicit declaration of function ‘strcpy’ [-Wimplicit-function-declaration]
   43 |     strcpy(res->cpf, cpfPassageiro);
      |     ^~~~~~
reserva.c:4:1: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
    3 | #include "reserva.h"
  +++ |+#include <string.h>
    4 | 
reserva.c:43:5: warning: incompatible implicit declaration of built-in function ‘strcpy’ [-Wbuiltin-declaration-mismatch]
   43 |     strcpy(res->cpf, cpfPassageiro);
      |     ^~~~~~
reserva.c:43:5: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
reserva.c: In function ‘comparaCPFSolicitanteReserva’:
reserva.c:63:10: warning: implicit declaration of function ‘strcmp’ [-Wimplicit-function-declaration]
   63 |     if (!strcmp(r->cpf, cpf))
      |          ^~~~~~
reserva.c:63:10: note: include ‘<string.h>’ or provide a declaration of ‘strcmp’
reserva.c: In function ‘setStatusReserva’:
reserva.c:132:5: warning: incompatible implicit declaration of built-in function ‘strcpy’ [-Wbuiltin-declaration-mismatch]
  132 |     strcpy(d->status, status);
      |     ^~~~~~
reserva.c:132:5: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
reserva.c: In function ‘setIDReserva’:
reserva.c:142:5: warning: incompatible implicit declaration of built-in function ‘strcpy’ [-Wbuiltin-declaration-mismatch]
  142 |     strcpy(d->id, id);
      |     ^~~~~~
reserva.c:142:5: note: include ‘<string.h>’ or provide a declaration of ‘strcpy’
